2006-12-04  Edward Hervey  <edward@fluendo.com>

	Patch by: Richard Boulton <richard@tartarus.org>
	
	* bin/pitivi.in:
	* pitivi/configure.py.in:
	Allow pitivi to work on local svn repositories in the same way it works
	when using uninstalled from CVS.
	Fixes #381970

2006-12-04  Edward Hervey  <edward@fluendo.com>

	Patch by: Richard Boulton <richard@tartarus.org>
	
	* pitivi/ui/mainwindow.py: (PitiviMainWindow._setActions): 
	Use connect_after instead of connect when connection to key events, so
	that standard handlers (like menu shortcuts) can actually work.
	Fixes #381959

2006-12-04  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Small typo fix.

2006-12-04  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Switch checks for gst-python and pygtk to python checks instead of
	relying on pkg-config since there might be several versions of the
	modules (on per python version) and pkg-config only handles one version.
	Fixes #382249

2006-12-03  Edward Hervey  <edward@fluendo.com>

	* pitivi/objectfactory.py:
	If an audio caps does not have a depth property, use the width property.

2006-12-02  Edward Hervey  <edward@fluendo.com>

	* configure.ac: (PYGST_REQ): Add requirement for gst-python >= 0.10.5.4
	since we need some new additions that are used in the smart video
	scaler.

2006-12-01  Edward Hervey  <edward@fluendo.com>

	* pitivi/elements/smartscale.py:
	Implement the smart scaling logic in SmartVideoScale()
	* pitivi/bin.py:
	Small modification to properly use SmartVideoScale()
	Videos are now properly scaled, with black borders if needed.

2006-11-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Use the ExportSettings audio and video caps.
	Add an audioresample for the audio encoder.
	Put videorate AFTER videoscale and BEFORE the encoder.
	* pitivi/check.py:
	* pitivi/configure.py.in:
	* pitivi/elements/__init__.py:
	Add documentation
	* pitivi/elements/smartscale.py:
	Put videoscale before videobox.